[gd_scene load_steps=4 format=3 uid="uid://30d2424oam6i"]

[ext_resource type="TileSet" uid="uid://0dggvm2m4qyl" path="res://Assets/Resources/flesh_tile.tres" id="1_8psy0"]
[ext_resource type="Script" uid="uid://dktegqxr56fql" path="res://Scenes/BuilderMode/builder_mode.gd" id="1_y85i2"]
[ext_resource type="Resource" uid="uid://bscmx8itty5qg" path="res://System/brush_registry.tres" id="2_obs3p"]

[node name="BuilderMode" type="Node2D"]
script = ExtResource("1_y85i2")
brush_registry = ExtResource("2_obs3p")

[node name="Coilmap" type="TileMap" parent="."]
tile_set = ExtResource("1_8psy0")
format = 2

[node name="Base" type="TileMapLayer" parent="Coilmap"]
use_parent_material = true
tile_set = ExtResource("1_8psy0")

[node name="Walls" type="TileMapLayer" parent="Coilmap"]
use_parent_material = true
tile_set = ExtResource("1_8psy0")

[node name="Hazards" type="TileMapLayer" parent="Coilmap"]
use_parent_material = true
tile_set = ExtResource("1_8psy0")

[node name="Markers" type="TileMapLayer" parent="Coilmap"]
use_parent_material = true
tile_set = ExtResource("1_8psy0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PaletteBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="PaletteRow" type="HBoxContainer" parent="UI/PaletteBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FleshBTtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="WallSolidBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="WallDigestBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="AcidBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="StickyBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="SpawnBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="HeartrootBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2

[node name="EraserBtn" type="Button" parent="UI/PaletteBar/PaletteRow"]
layout_mode = 2
